<resources>
    <string name="app_name">뮤몽</string>

    <string name="adfit_client_id_50">DAN-XuUWhh7ZeB0hSQDl</string>
    <string name="adfit_client_id_100">DAN-qPia47sOfpcajRFD</string>

    <!-- Common -->
    <string name="reply">대댓글</string>
    <string name="title_home">홈</string>
    <string name="title_practice">연습장</string>
    <string name="title_social">소셜</string>
    <string name="title_community">커뮤니티</string>

    <!-- Fragment Titles -->
    <string name="title_home_fragment">@string/title_home</string>
    <string name="title_practice_fragment">@string/title_practice</string>
    <string name="title_social_fragment">@string/title_social</string>
    <string name="title_community_fragment">@string/title_community</string>

    <!-- Bottom Navigation Bar -->
    <string name="nav_home_label">@string/title_home</string>
    <string name="nav_practice_label">@string/title_practice</string>
    <string name="nav_social_label">@string/title_social</string>
    <string name="nav_community_label">@string/title_community</string>

    <!-- Home Fragment -->
    <string name="home_notice_title">공지사항</string>
    <string name="home_event_title">이벤트</string>

    <!-- Practice Fragment -->
    <string name="practice_home_practice_today_title">오늘의 연습</string>
    <string name="practice_home_practice_analytics_title">연습 기록</string>
    <string name="practice_home_practice_pieces_title">곡별 연습</string>
    <string name="practice_calendar_monday">월</string>
    <string name="practice_calendar_tuesday">화</string>
    <string name="practice_calendar_wednesday">수</string>
    <string name="practice_calendar_thursday">목</string>
    <string name="practice_calendar_friday">금</string>
    <string name="practice_calendar_satureday">토</string>
    <string name="practice_calendar_sunday">일</string>
    <string name="practice_add_new_practice">오늘의 연습 추가하기</string>

    <string name="practice_add_practice_select_piece">곡을 선택해 주세요.</string>
    <string name="practice_add_practice_will_show_file_name">이 곳에 녹음 중인 파일명이 표시됩니다.</string>
    <string name="practice_add_practice_practice_today_title">오늘의 연습</string>

    <!-- Social Fragment -->

    <!-- Community Fragment -->
    <string name="community_title_favorite_boards">즐겨찾는 게시판</string>
    <string name="community_title_mumong_pick">뮤몽 PICK</string>
    <string name="community_title_recent_articles">실시간 게시글</string>
    <string name="community_suggest">추천</string>
    <string name="community_notice">공지사항</string>

    <string name="community_topic_best">베스트</string>
    <string name="community_topic_daily">일상</string>
    <string name="community_topic_recording">내 음악을 들어줘</string>
    <string name="community_topic_tip">꿀팁</string>
    <string name="community_topic_question">질문답변</string>
    <string name="community_topic_advertise">홍보</string>

    <!-- Tooblar Actions -->
    <string name="toolbar_action_more">More</string>
    <string name="toolbar_action_tuner">Tuner</string>
    
    <!-- Profile -->
    <string name="profile_edit_account"><u>계정 편집하기</u></string>
    <string name="profile_common_notice">공지사항</string>
    <string name="profile_common_alert">알림</string>
    <string name="profile_common_settings">설정</string>
    <string name="profile_social_friends">친구 목록</string>
    <string name="profile_social_groups">그룹 목록</string>
    <string name="profile_social_my_articles">나의 피드</string>
    <string name="profile_social_commented">댓글 단 피드</string>
    <string name="profile_social_bookmarked">스크랩한 피드</string>
    <string name="profile_community_favorite_boards">즐겨찾는 게시판</string>
    <string name="profile_community_my_articles">나의 글</string>
    <string name="profile_community_commented">댓글 단 글</string>
    <string name="profile_community_bookmarked">스크랩한 글</string>
    <string name="profile_common_mumong_guide">뮤몽 안내서</string>
    <string name="profile_common_about_us">제작자 이야기</string>
    <string name="profile_common_version_info">버전 정보</string>

    <!-- Comment -->
    <string name="comment_hint">댓글을 남겨주세요.</string>
</resources>