<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.practice.home.PracticeHomeFragment">
    <data>
        <variable
            name="viewModel"
            type="com.studiowash.mumong.practice.home.PracticeHomeViewModel" />
        <variable
            name="year"
            type="int" />
        <variable
            name="month"
            type="int" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <TextView
            android:id="@+id/favorite_boards_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_practice_fragment" />
        <LinearLayout
            android:id="@+id/calendar_info_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/favorite_boards_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calendar_info_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(year)}"/>
            <ImageView
                android:id="@+id/calendar_info_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:onClick="@{viewModel::onClickCalendarIcon}"/>
            <TextView
                android:id="@+id/calendar_info_month_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(month)}"/>
        </LinearLayout>
        <com.studiowash.mumong.presentation.practice.home.view.DateScrollView
            android:id="@+id/date_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calendar_info_linear_layout"
            android:paddingBottom="30dp"/>
        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height_thick"
            android:background="@color/gray_2"
            app:layout_constraintTop_toBottomOf="@id/date_scroll_view"/>
        <LinearLayout
            android:id="@+id/practice_today_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/separator_1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_home_practice_today_title"/>
        </LinearLayout>
        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height_thick"
            android:background="@color/gray_2"
            app:layout_constraintTop_toBottomOf="@id/practice_today_linear_layout"/>
        <LinearLayout
            android:id="@+id/practice_analytics_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/separator_2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_home_practice_analytics_title"/>
        </LinearLayout>
        <View
            android:id="@+id/separator_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_separator_height_thick"
            android:background="@color/gray_2"
            app:layout_constraintTop_toBottomOf="@id/practice_analytics_linear_layout"/>
        <LinearLayout
            android:id="@+id/practice_pieces_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/separator_3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practice_home_practice_pieces_title"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>