<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".community.CommunityFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 즐겨찾는 게시판 -->
            <TextView
                android:id="@+id/favorite_boards_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/community_title_favorite_boards"
                android:paddingTop="@dimen/fragment_default_top_padding"
                android:paddingHorizontal="@dimen/fragment_default_horizontal_padding"
                android:paddingBottom="@dimen/community_fragment_title_bottom_padding"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorite_boards_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/favorite_boards_title_text_view"
                android:paddingStart="@dimen/fragment_default_horizontal_padding"/>

            <!-- 뮤몽 PICK -->
            <TextView
                android:id="@+id/mumong_pick_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite_boards_recycler_view"
                android:text="@string/community_title_mumong_pick"
                android:paddingTop="@dimen/fragment_default_top_padding"
                android:paddingHorizontal="@dimen/fragment_default_horizontal_padding"
                android:paddingBottom="@dimen/community_fragment_title_bottom_padding"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mumong_pick_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mumong_pick_title_text_view"
                android:paddingStart="@dimen/fragment_default_horizontal_padding"/>

            <!-- 실시간 게시글 -->
            <TextView
                android:id="@+id/recent_articles_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mumong_pick_recycler_view"
                android:text="@string/community_title_recent_articles"
                android:paddingTop="@dimen/fragment_default_top_padding"
                android:paddingHorizontal="@dimen/fragment_default_horizontal_padding"
                android:paddingBottom="@dimen/community_fragment_title_bottom_padding"/>
            <View
                android:id="@+id/separator_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_separator_height_thin"
                android:background="@color/gray_2"
                app:layout_constraintTop_toBottomOf="@id/recent_articles_title_text_view"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_articles_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/separator_1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>